--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -4,5 +4,8 @@
 
 #app {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  font-family: "Poppins";
 }
