--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -13,7 +13,7 @@
   --color-error: #ef4444;
 
   /* Console Panel */
-  --color-console-bg: #1e293b;
+  --color-console-bg: #24292e;
   --color-console-text: #f8fafc;
   --color-console-log: #38bdf8;
   --color-console-error: #f87171;
@@ -46,6 +46,4 @@
   --shadow-shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --hadow-shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --shadow-lg-bottom: 0 5px 10px -3px rgb(0 0 0 / 0.1);
-
-  --font-poppins: "Poppins", sans-serif;
 }
